--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="clearfix">
     <header>
-       <h1>header</h1>
+       <p>header</p>
    </header>
 
    <nav>
-       <h1>nav</h1>
+       <p>nav</p>
    </nav>  
 
    <section>
